[gd_scene load_steps=5 format=3 uid="uid://c4g54ntuyud2p"]

[ext_resource type="Script" uid="uid://chmkcs82s4yvg" path="res://Save System/Scripts/SaveFileComponent.gd" id="1_v0rvl"]
[ext_resource type="FontFile" uid="uid://bl608iusnxo45" path="res://Menus/Assets/clean_font.otf" id="2_2ngbx"]
[ext_resource type="FontFile" uid="uid://bypuvq5s2ra6o" path="res://Menus/Assets/font-bold.otf" id="2_lhho6"]
[ext_resource type="Theme" uid="uid://c6hlgkp88xg50" path="res://Menus/Assets/LightButton.tres" id="4_j4h2k"]

[node name="SaveFile1" type="Panel"]
custom_minimum_size = Vector2(1152, 160)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -768.0
offset_bottom = -920.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v0rvl")
number = 1

[node name="SaveNumber" type="Label" parent="."]
custom_minimum_size = Vector2(180, 160)
layout_mode = 0
offset_right = 180.0
offset_bottom = 160.0
theme_override_fonts/font = ExtResource("2_lhho6")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewFileText" type="Label" parent="."]
custom_minimum_size = Vector2(612, 160)
layout_mode = 0
offset_left = 180.0
offset_right = 792.0
offset_bottom = 160.0
theme_override_fonts/font = ExtResource("2_2ngbx")
theme_override_font_sizes/font_size = 64
text = "New File"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FileInfo" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(612, 160)
layout_mode = 0
offset_left = 180.0
offset_right = 792.0
offset_bottom = 26.0

[node name="Location" type="Label" parent="FileInfo"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_2ngbx")
theme_override_font_sizes/font_size = 48
text = "Nowhere"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Playtime" type="Label" parent="FileInfo"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_2ngbx")
theme_override_font_sizes/font_size = 48
text = "0 Minutes"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(792, 160)
layout_mode = 0
offset_right = 792.0
offset_bottom = 160.0

[node name="DeleteButton" type="Button" parent="."]
custom_minimum_size = Vector2(360, 160)
layout_mode = 0
offset_left = 792.0
offset_right = 1152.0
offset_bottom = 160.0
theme = ExtResource("4_j4h2k")
theme_override_font_sizes/font_size = 36
text = "Delete Save"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
